'@@author RishabhShenoy03
@startuml
title Set Command Class View

class Parser {
  + parse(input: String): ParsedCommand
}

class CG2StocksTracker {
  + run()
}

class PortfolioBook {
  + getActivePortfolio(): Portfolio
}

class Portfolio {
  + setPriceForHolding(assetType: AssetType, ticker: String, price: double): boolean
  + setPriceForTicker(ticker: String, price: double): int
}

class Storage {
  + save(portfolioBook: PortfolioBook)
  + saveWatchlist(watchlist: Watchlist)
}

class Ui {
  + showMessage(message: String)
}

CG2StocksTracker ..> PortfolioBook : getActivePortfolio()
CG2StocksTracker ..> Portfolio : setPriceForHolding/setPriceForTicker
CG2StocksTracker ..> Storage : save()
CG2StocksTracker ..> Ui : showMessage(...)
@enduml
